# UTHelper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.MD  README.md  USAGE_EXAMPLES.md  test_demo.c  test_demo_transformed.cpp  test_pointcut.pc  test_saop_impl.h  test_simple.c  toolchain.cmake
plugin/: AST2Matcher.cpp  AST2Matcher.h  ASTMakeMatcherVisitor.cpp  ASTMakeMatcherVisitor.h  ASTMatcherP.h  AddFriendConsumer.cpp  AddFriendConsumer.h  CMakeLists.txt  CompositeConsumer.cpp  CompositeConsumer.h  MakeVirtualConsumer.cpp  MakeVirtualConsumer.h  Pointer.h  RemoveFinalConsumer.cpp  RemoveFinalConsumer.h  SaopPlugin.cpp  UTHelperPlugin.cpp  UnifiedASTVisitor.cpp  UnifiedASTVisitor.h  WrapFunctionCallback.cpp  WrapFunctionCallback.h  WrapFunctionConsumer.cpp  WrapFunctionConsumer.h  saop.h  soap.h
plugin/external_inc/: saop.h  saopImpl.h
plugin/parser/: ASTNode.cpp  ASTNode.h  CMakeLists.txt  Common.h  CommonHeader.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.def  Token.h  grammar.txt
test/: CMakeLists.txt  run_mock_test.sh  test.cpp  test_add_friend.cpp  test_add_friend_custom_output.cpp  test_add_friend_output.cpp  test_all_features.cpp  test_mock_final.cpp  test_mock_final_test.cpp  test_mock_final_transformed.h  test_only_remove_final.cpp  test_remove_final.cpp  test_remove_final_output.cpp  test_remove_final_output2.cpp  test_unified.cpp
test/mock_test/: CMakeLists.txt
test/parser/: CMakeLists.txt  ParserMain.cpp
test/parser_unit_test/: CMakeLists.txt  test_parser.cpp
test/system_test/: CMakeLists.txt  pointcut.pc  saopImpl.h  test.cpp
test_windows/: RUN_ON_WINDOWS.md  test_plugin.bat  test_plugin.ps1  test_simple.cpp
